internal/shader/testdata/bad/bad_var4.go
package main

func Foo(föö vec4) vec4 {
	var ret vec4 = vec4(föö, 0)
	return ret
}
